tests/snapshots/run_wpt_conformance__coreml_conv2d_float32_4D_input_and_filter_tensors_options_inputLayout__nhwc__and_options_filterLayout__ihwo_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float32 4D input and filter tensors options.inputLayout='nhwc' and options.filterLayout='ihwo', coreml
 conv2d :: conv2d float32 4D input and filter tensors options.inputLayout='nhwc' and options.filterLayout='ihwo': index 1: actual=0.74136084 expected=0.9626783 ulp=3713091 tolerance=16384
  inputs: conv2dInput: [0.7529087066650391, 0.7520291805267334, 0.5949527621269226, 0.2163185328245163, 0.07589349150657654, 0.151067852973938, 0.1212485060095787, 0.5364335179328918, 0.5937089920043945, 0.991003155708313, 0.3630942404270172, 0.9289674162864684, 0.2272737622261047, 0.5414124131202698, 0.08445341885089874, 0.6765284538269043, 0.6193256378173828, 0.3929215967655182]; conv2dFilter: [0.14543837308883667, 0.6952692270278931, 0.3072136342525482, 0.967112958431244, 0.5070913434028625, 0.43241235613822937, 0.10836050659418106, 0.08139707148075104, 0.9849002361297609, 0.3202308118343353, 0.5303338766098022, 0.4281076192855835] (constant)
  expected conv2dOutput: [0.8845428, 0.9626783, 0.8020333, 0.74136084, 0.9108521, 0.62771934, 0.2897797, 0.4832427, 0.44834223, 0.40538964 ...] (len=24)
  actual conv2dOutput: [0.88454276, 0.74136084, 0.35093072, 0.2897797, 0.4053896, 0.5209164, 0.9626783, 0.910852, 0.5999443, 0.4832427 ...] (len=24)
  expected conv2dOutput full nd:
[0.8845428, 0.9626783, 0.8020333, 0.74136084, 0.9108521, 0.62771934, 0.2897797, 0.4832427, 0.44834223, 0.40538964, ...] (len=24, shape=[2, 2, 2, 3])
  actual conv2dOutput full nd:
[0.88454276, 0.74136084, 0.35093072, 0.2897797, 0.4053896, 0.5209164, 0.9626783, 0.910852, 0.5999443, 0.4832427, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dInput: f32[2, 3, 3, 1];
  }

  consts {
    operand_0: f32[1, 2, 2, 3] @bytes([204, 237, 20, 62, 42, 253, 49, 63, 27, 75, 157, 62, 183, 148, 119, 63, 189, 208, 1, 63, 39, 101, 221, 62, 29, 236, 221, 61, 130, 179, 166, 61, 108, 34, 124, 63, 75, 245, 163, 62, 246, 195, 7, 63, 236, 48, 219, 62]);
  }

  nodes {
    [conv2dOutput] = conv2d(conv2dInput, operand_0, bias=null, dilations=[], filterLayout="ihwo", groups=1, inputLayout="nhwc", label="", padding=[], strides=[]);
  }

  outputs { conv2dOutput; }
}
